bindings/ot0-hooks.h

typedef enum{ false=0, true=1} bool;
uint64_t OT0_now();
size_t OT0_C25519_PUBLIC_KEY_SIZE();
size_t OT0_C25519_PRIVATE_KEY_SIZE();
size_t OT0_C25519_SIGNATURE_SIZE();
size_t OT0_C25519_KEYPAIR_SIZE();
size_t OT0_SOCKADDR_STORAGE_SIZE();
void OT0_C25519_gen_kp(void*);
void OT0_C25519_key_agree(void* sk, void* pk, void* key, size_t size);
void OT0_C25519_sign2(const void* sk, const void* pk, const void* buffer, size_t size, void* result);
bool OT0_C25519_verify(const void* pk, const void* buffer, size_t size, const void* signature);
void OT0_sockaddr_into_string(const void* sa, char buf[64]);
void* OT0_sockaddr_from_string(const char* str);
void OT0_init_sockaddr_from_string(void *into, const char* str);
void OT0_free_sockaddr(void* addr);
void* OT0_sockaddr_from_bytes_and_port(const void* data, size_t len, unsigned int port);
void OT0_init_sockaddr_from_bytes_and_port(void *into, const void* data, size_t len, unsigned int port);
  
typedef const void* OT0_Id;
OT0_Id OT0_generate_Id();
OT0_Id OT0_new_Id_from_string(const char*str);
void OT0_g_free_ID(OT0_Id);
void OT0_Id_to_string(OT0_Id, bool, char*);
const void* OT0_ID_pk(OT0_Id id);
void OT0_ID_kp_into(OT0_Id id, void* result);
typedef void* OT0_VERTEX;
void OT0_free_vertex(OT0_VERTEX o);
OT0_VERTEX OT0_u8_to_vertex(const void* from, size_t len, unsigned int off);