bindings/ot0.scm

;;; (C) 2020 JFW
;;;
;;; # Off Topic Null

(c-declare #<<END

#ifdef _WIN32
# include <winsock2.h>
# include <ws2tcpip.h>
// # include <afunix.h>

/*
 * MinGW does not have sockaddr_un (yet)
 */

# ifndef UNIX_PATH_MAX
#  define UNIX_PATH_MAX 108
struct sockaddr_un {
  ADDRESS_FAMILY sun_family;
  char sun_path[UNIX_PATH_MAX];
};
# endif
#else
#include <sys/socket.h>
#include <netinet/in.h>
#include <sys/un.h>
#endif

#include <time.h>

#include "ot0-hooks.h"

END
)

(define-macro (%max-u64) #xffffffffffffffff)

(c-define-type void* (pointer "void"))

(define (u8vector-copy-from-ptr! u8 u8o ptr ptro len)
  ;; TBD: Add range checks
  ((c-lambda
    (scheme-object size_t void* size_t size_t) scheme-object
    "memcpy(___CAST(char *,___BODY(___arg1)) + ___arg2, ___CAST(char *,___arg3) + ___arg4, ___arg5);
    ___return(___arg1);")
   u8 u8o ptr ptro len))

(define (u8vector/space? x size)
  (and (u8vector? x) (>= (u8vector-length x) size)))

;;; Time

(define ot0-now (c-lambda () unsigned-int64 "OT0_now"))

(define ot0-time->string
  (c-lambda
   (unsigned-int64) char-string
   "
static /* I DO NOT SEE WHY THIS SHOULD BE STATIC, but valgrind complains */
char buf[26] = {0,0,0,0,0, 0,0,0,0,0, 0,0,0,0,0, 0,0,0,0,0, 0,0,0,0,0, 0};
 time_t tv =___arg1/1000;
#if WIN32
 _ctime64_s(&tv, 26, buf);
#else
 ctime_r(&tv, buf);
#endif
 ___return(buf);"))

;;; Crypto

(define OT0_C25519_PUBLIC_KEY_SIZE ((c-lambda () size_t "___return(OT0_C25519_PUBLIC_KEY_SIZE());")))
(define OT0_C25519_PRIVATE_KEY_SIZE ((c-lambda () size_t "___return(OT0_C25519_PRIVATE_KEY_SIZE());")))
(define OT0_C25519_SIGNATURE_SIZE ((c-lambda () size_t "___return(OT0_C25519_SIGNATURE_SIZE());")))
(define OT0_C25519_KEYPAIR_SIZE ((c-lambda () size_t "___return(OT0_C25519_KEYPAIR_SIZE());")))

(define (ot0-make-c25519-keypair) ;; EXPORT
  (let ((result (make-u8vector OT0_C25519_KEYPAIR_SIZE)))
    ((c-lambda (scheme-object) void "OT0_C25519_gen_kp(___BODY(___arg1));") result)
    result))

(define-macro (%ot0-u8vector-range-assert arg proc vec offset size)
  `(if (u8vector? ,vec)
       (or (>= (u8vector-length ,vec) ,size)
           (##raise-range-exception ,arg ',proc (u8vector-length ,vec) ,offset ,size))
       (error "illegal u8vector" ,proc ,arg ,vec)))

(define (c25519-keypair-secret-key kp) ;; EXPORT
  (%ot0-u8vector-range-assert 1 c25519-keypair-secret-key kp OT0_C25519_PUBLIC_KEY_SIZE OT0_C25519_PRIVATE_KEY_SIZE)
  (subu8vector kp OT0_C25519_PUBLIC_KEY_SIZE (u8vector-length kp)))

(define (ot0-C25519-key-agree! key pk sk) ;; EXPORT
  (unless (u8vector? key) (error "ot0-C25519-key-agree! illegal key" key))
  (%ot0-u8vector-range-assert 3 ot0-C25519-key-agree! sk 0 OT0_C25519_PRIVATE_KEY_SIZE)
  (%ot0-u8vector-range-assert 2 ot0-C25519-key-agree! pk 0 OT0_C25519_PUBLIC_KEY_SIZE)
  ((c-lambda
    (scheme-object scheme-object scheme-object size_t) void
    "OT0_C25519_key_agree(___BODY(___arg1), ___BODY(___arg2), ___BODY(___arg3), ___arg4);")
   sk pk key (u8vector-length key)))

(define (ot0-C25519-sign data pk sk) ;; EXPORT
  (unless (u8vector? data) (error "ot0-C25519-sign: can not sign" data))
  (%ot0-u8vector-range-assert 3 ot0-C25519-sign sk 0 OT0_C25519_PRIVATE_KEY_SIZE)
  (%ot0-u8vector-range-assert 2 ot0-C25519-sign pk 0 OT0_C25519_PUBLIC_KEY_SIZE)
  (let ((result (make-u8vector OT0_C25519_SIGNATURE_SIZE)))
    ((c-lambda
      (scheme-object scheme-object scheme-object size_t scheme-object) void
      "OT0_C25519_sign2(___BODY(___arg1), ___BODY(___arg2), ___BODY(___arg3), ___arg4, ___BODY(___arg5));")
     sk pk data (u8vector-length data) result)
    result))

(define (ot0-C25519-verify data sig pk) ;; EXPORT
  (unless (u8vector? data) (error "ot0-C25519-verify can not verify" data))
  (%ot0-u8vector-range-assert 2 ot0-C25519-verify sig 0 OT0_C25519_SIGNATURE_SIZE)
  (%ot0-u8vector-range-assert 3 ot0-C25519-verify pk 0 OT0_C25519_PUBLIC_KEY_SIZE)
  ((c-lambda
    (scheme-object scheme-object size_t scheme-object) bool
    "___return(OT0_C25519_verify(___BODY(___arg1), ___BODY(___arg2), ___arg3, ___BODY(___arg4)));")
   pk data (u8vector-length data) sig))

;;; Socket Address

(define OT0_SOCKADDR_STORAGE_SIZE ((c-lambda () size_t "___return(OT0_SOCKADDR_STORAGE_SIZE());")))
(define OT0_SOCKADDR_IN4_SIZE 8) ;; FIXME
(define OT0_SOCKADDR_IN6_SIZE 20) ;; FIXME

(c-define-type OT0-socket-address (pointer (struct "sockaddr_storage") socket-address))
(c-define-type OT0-nonnull-socket-address (nonnull-pointer (struct "sockaddr_storage") socket-address))

(define (%%ot0-socket-address? obj) (let ((f (foreign-tags obj))) (and f (eq? (car f) 'socket-address))))

(define (ot0-socket-address? obj)
  ;; TBD: remove deprecated, allocating version
  (or
   (u8vector/space? obj OT0_SOCKADDR_STORAGE_SIZE)
   (%%ot0-socket-address? obj)))

(define (ot0-socket-address->string addr) ;; EXPORT
  (cond
   ((u8vector/space? addr OT0_SOCKADDR_STORAGE_SIZE)
    ((c-lambda
      (scheme-object) char-string
      "char buf[64]; OT0_sockaddr_into_string(___BODY(___arg1), buf); ___return(buf);")
     addr))
   ((u8vector? addr) (error "socket-address->string: u8vector too short"))
   (else
    ((c-lambda
      (OT0-socket-address) char-string
      "char buf[64]; OT0_sockaddr_into_string(___arg1, buf); ___return(buf);")
     addr))))

(define ot0-string->socket-address1 ;; MUST be freed!
  ;; FIXME: use a better version without malloc instead!
  (let ((free (c-lambda (OT0-nonnull-socket-address) void "OT0_free_sockaddr")))
    (lambda (str)
      (let ((result ((c-lambda (char-string) OT0-socket-address "OT0_sockaddr_from_string") str)))
        (make-will result free)
        result))))

(define (ot0-string->socket-address str)
  (let ((result (make-u8vector OT0_SOCKADDR_STORAGE_SIZE)))
    ((c-lambda
      (scheme-object char-string) void
      "OT0_init_sockaddr_from_string(___BODY(___arg1), ___arg2);")
     result str)
    result))

(define ot0-internetX-address->socket-address1 ;; deprecated
  (let ((free (c-lambda (OT0-nonnull-socket-address) void "OT0_free_sockaddr"))
        (build (c-lambda
                (scheme-object size_t unsigned-int16) OT0-socket-address
                "___return(OT0_sockaddr_from_bytes_and_port(___BODY(___arg1),___arg2,___arg3));")))
    (lambda (host port)
      (let ((result (build host (u8vector-length host) port)))
        (make-will result free)
        result))))

(define ot0-internetX-address->socket-address
  (let ()
    (define build!
      (c-lambda
       (scheme-object scheme-object size_t unsigned-int16) OT0-socket-address
       "OT0_init_sockaddr_from_bytes_and_port(___BODY(___arg1), ___BODY(___arg2),___arg3,___arg4);"))
    (lambda (host port)
      (let ((result (make-u8vector OT0_SOCKADDR_STORAGE_SIZE)))
        (build! result host (u8vector-length host) port)
        result))))

(define (ot0-socket-address-family sa)
  (cond
   ((u8vector/space? sa 1)
    ((c-lambda (scheme-object) int "___return(___CAST(struct sockaddr_storage*, ___BODY(___arg1))->ss_family);") sa))
   (else ((c-lambda (OT0-nonnull-socket-address) int "___return(___arg1->ss_family);") sa))))

(define (ot0-socket-address-family-set! sa fam)
  (cond
   ((u8vector/space? sa 1)
    ((c-lambda (scheme-object int) void
               "___CAST(struct sockaddr_storage*, ___BODY(___arg1))->ss_family = ___arg2;") sa fam))
   (else ((c-lambda (OT0-nonnull-socket-address int) void "___arg1->ss_family = ___arg2;") sa fam))))

(define (ot0-socket-address4-port sa4)
  (cond
   ((u8vector/space? sa OT0_SOCKADDR_IN4_SIZE)
    ((c-lambda (scheme-object) unsigned-int "___CAST(struct sockaddr_in*, ___BODY(___arg1))->sin_port;") sa4))
   (else
    ((c-lambda
      (OT0-nonnull-socket-address) unsigned-int
      "___return(ntohs(___CAST(struct sockaddr_in *, ___arg1)->sin_port));") sa4))))

(define (ot0-socket-address4-ip4addr sa)
  (let ((result (make-u8vector 4)))
    (cond
     ((u8vector/space? sa OT0_SOCKADDR_IN4_SIZE)
      ((c-lambda
        (scheme-object scheme-object) void
        "memcpy(___BODY(___arg2), &(___CAST(struct sockaddr_in*, ___BODY(___arg1))->sin_addr), 4);")
       sa result))
     (else
      ((c-lambda
        (OT0-nonnull-socket-address scheme-object) void
        "memcpy(___BODY(___arg2), &(((struct sockaddr_in *)___arg1)->sin_addr), 4);")
       sa result)))
    result))

(define (ot0-socket-address6-port sa)
  (cond
   ((u8vector/space? sa OT0_SOCKADDR_IN6_SIZE)
    ((c-lambda
      (scheme-object) unsigned-int
      "___return(ntohs(___CAST(struct sockaddr_in6 *, ___BODY(___arg1))->sin6_port));")
     sa))
   (else
    ((c-lambda
      (OT0-nonnull-socket-address) unsigned-int
      "___return(ntohs(___CAST(struct sockaddr_in6 *, ___arg1)->sin6_port));")
     sa))))

(define (ot0-socket-address6-flowinfo sa)
  (cond
   ((u8vector/space? sa OT0_SOCKADDR_IN6_SIZE)
    ((c-lambda
      (scheme-object) int
      "___return(___CAST(struct sockaddr_in6 *, ___BODY(___arg1))->sin6_flowinfo);")
     sa))
   (else
    ((c-lambda
      (OT0-nonnull-socket-address) int
      "___return(___CAST(struct sockaddr_in6 *, ___arg1)->sin6_flowinfo);")
     sa))))

(define (ot0-socket-address6-scope sa)
  (cond
   ((u8vector/space? sa OT0_SOCKADDR_IN6_SIZE)
    ((c-lambda
      (scheme-object) int
      "___return(___CAST(struct sockaddr_in6 *, ___BODY(___arg1))->sin6_scope_id);")
     sa))
   (else
    ((c-lambda
      (OT0-nonnull-socket-address) int
      "___return(___CAST(struct sockaddr_in6 *, ___arg1)->sin6_scope_id);")
     sa))))

(define (ot0-socket-address6-ip6addr sa)
  (let ((result (make-u8vector 16)))
    (cond
     ((u8vector/space? sa OT0_SOCKADDR_IN6_SIZE)
      ((c-lambda
        (scheme-object scheme-object) void
        "memcpy(___BODY(___arg2), &(((struct sockaddr_in6 *)___BODY(___arg1))->sin6_addr), 16);")
       sa result))
     (else
      ((c-lambda
        (OT0-nonnull-socket-address scheme-object) void
        "memcpy(___BODY(___arg2), &(((struct sockaddr_in6 *)___arg1)->sin6_addr), 16);")
       sa result)))
    result))

;;; Network Identifier

(c-define-type ot0-id (type "OT0_Id" ot0-id))

(define (ot0-generate-id) ;; EXPORT
  ;;; BEWARE: The underlying code claims this may take time.  So far it does not.
  ;;;
  ;;(print "Generating key...")
  (let ((result ((c-lambda () ot0-id "OT0_generate_Id"))))
    ;;(println "done.")
    (make-will result (c-lambda (ot0-id) void "OT0_g_free_ID"))
    result))

(define (string->ot0-id str) ;; EXPORT
  (let ((result ((c-lambda (char-string) ot0-id "OT0_new_Id_from_string") str)))
    (make-will result (c-lambda (ot0-id) void "OT0_g_free_ID"))
    result))

(define (ot0-id->string id #!optional (include-private #f)) ;; EXPORT
  ((c-lambda (ot0-id bool) char-string "
char buf[384]; //ZT_IDENTITY_STRING_BUFFER_LENGTH
OT0_Id_to_string(___arg1, ___arg2, buf);
___return(buf);")
   id include-private))

(define (ot0-id-pk obj) ;; EXPORT
  (let ((result (make-u8vector OT0_C25519_PUBLIC_KEY_SIZE)))
    (u8vector-copy-from-ptr!
     result 0
     ((c-lambda (ot0-id) void* "OT0_ID_pk") obj) 0
     OT0_C25519_PUBLIC_KEY_SIZE)
    result))

(define (ot0-id-kp obj) ;; EXPORT
  (let ((result (make-u8vector OT0_C25519_KEYPAIR_SIZE)))
    ((c-lambda (ot0-id scheme-object) void "OT0_ID_kp_into(___arg1, ___BODY(___arg2));") obj result)
    result))

;;; Vertex

(c-define-type ot0-vertex (type "OT0_VERTEX" ot0-vertex))

(define (ot0-vertex? obj) (and (foreign? obj) (let ((f (foreign-tags obj))) (and f (eq? (car f) 'ot0-vertex)))))

(define ot0-vertex-free! (c-lambda (ot0-vertex) void "OT0_free_vertex"))

(define %u8vector->ot0-vertex
  (c-lambda
   (scheme-object size_t unsigned-int) ot0-vertex
   "___return(OT0_u8_to_vertex(___BODY(___arg1), ___arg2, ___arg3));"))

(define (u8vector->ot0-vertex u8 #!optional (off 0)) ;; EXPORT
  (let ((result (%u8vector->ot0-vertex u8 (u8vector-length u8) off)))
    (make-will result ot0-vertex-free!)
    result))
